makko/default/registry/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "registry.senk0.com"
  rules:
    - backendRefs:
        - name: registry
          port: 5000
